Solucao do problema do layout com o menu e o botao View e Delete
