# server/nodejs-server-server/api/swagger.yaml
@@ -218,6 +218,34 @@ paths:
       security:
       - api_key: []
       x-swagger-router-controller: "App"
+  /app/api/V1/departments/{id}:
+    get:
+      tags:
+      - "app"
+      summary: "Find pet by ID"
+      description: "Returns a single pet"
+      operationId: "getDepartmentsById"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of pet to return"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/inline_response_200_3"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+      security:
+      - api_key: []
+      x-swagger-router-controller: "App"
   /user:
     post:
       tags:
