# server/nodejs-server-server/controllers/App.js
@@ -12,3 +12,6 @@ module.exports.getDepartments = function getDepartments (req, res, next) {
   Auth.getDepartments(req.swagger.params, res, next);
 };
 
+module.exports.getDepartmentsById = function getDepartmentsById (req, res, next) {
+  Auth.getDepartmentsById(req.swagger.params, res, next);
+};
